--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,25 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
+        cache: 'npm'
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        npm install
+        npm list --depth=0 # هذا سيعرض التبعيات المثبتة
 
     - name: Build
-      run: npm run build
+      run: |
+        npm run build --if-present
+        ls -la dist/ # هذا سيعرض محتويات مجلد dist
+
+    - name: Debug info
+      run: |
+        echo "Node version: $(node -v)"
+        echo "NPM version: $(npm -v)"
+        echo "Current directory: $(pwd)"
+        echo "Directory contents:"
+        ls -la
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
