--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.5.21"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^11.0.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.1.6"
   }
