--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "vue": "^3.5.21"
+    "@vueuse/core": "^13.9.0",
+    "lucide-vue-next": "^0.544.0",
+    "pinia": "^2.3.1",
+    "vue": "^3.5.21",
+    "vuetify": "^3.10.2"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^11.0.1",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.6"
+    "@vitejs/plugin-vue": "^5.2.4",
+    "vite": "^5.4.20",
+    "vue-router": "^4.5.1"
   }
 }
